--- a/deploy-server.yml
+++ b/deploy-server.yml
@@ -1,16 +1,33 @@
-- name: Create a new droplet
-  community.digitalocean.digital_ocean_droplet:
-    state: present
-    name: mydroplet
-    oauth_token: {{ digital_ocean_token }}
-    size: "s-1vcpu-1gb"
-    region: fra1
-    image: docker-20-04
-    wait_timeout: 500
-    ssh_keys: {{ ssh_keys}}
-  register: my_droplet
+---
+- hosts: localhost
+  gather_facts: false
+  connection: local
 
-- debug:
-    msg: "ID is {{ my_droplet.data.droplet.id }}, IP is {{ my_droplet.data.ip_address }}"
+  vars:
+    do_token: "{{ lookup('env', 'DO_TOKEN') }}"
+    ssh_pub: "{{ lookup('env', 'SSH_PUBLIC_KEY') }}"
+    ssh_private: "{{ lookup('env', 'SSH_PRIVATE_KEY') }}"
+    project_name: "{{ lookup('env', 'PROJECT_NAME') }}"
+  tasks:
+    - name: Create ssh key
+      community.digitalocean.digital_ocean_sshkey:
+        oauth_token: "{{ do_token }}"
+        name: "{{ project_name  }} ssh key"
+        ssh_pub_key: "{{ ssh_pub }}"
+        state: present
+      register: ssh_key
 
+    - name: Create a new droplet
+      community.digitalocean.digital_ocean_droplet:
+        state: present
+        name: "{{ project_name }} backend"
+        oauth_token: "{{ do_token }}"
+        size: s-1vcpu-1gb
+        region: fra1
+        image: docker-20-04
+        wait_timeout: 500
+        ssh_keys: "{{ ssh_pub }}"
+      register: droplet
 
+    # - debug:
+    #     msg: "ID is {{ my_droplet.data.droplet.id }}, IP is {{ my_droplet.data.ip_address }}"
