feat: add playbook for ansible

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -21,3 +21,5 @@ jobs:
 
       - name: Run ansible-galaxy
         run: ansible-galaxy install -r requirements.yml
+
+      - name: Run ansible-playbook
