--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -20,3 +20,4 @@ jobs:
         run: ansible-galaxy install -r requirements.yml
 
       - name: Run ansible-playbook
+        run: ansible-playbook deploy-server.yml
