--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -23,3 +23,6 @@ jobs:
         run: ansible-playbook deploy-server.yml
         env:
           PROJECT_NAME: fastup-kit
+          DO_TOKEN: ${{ secrets.DO_TOKEN }}
+          SSH_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
