--- a/deploy-server.yml
+++ b/deploy-server.yml
@@ -17,17 +17,17 @@
         state: present
       register: ssh_key
 
-    # - name: Create a new droplet
-    #   community.digitalocean.digital_ocean_droplet:
-    #     state: present
-    #     name: "{{ project_name }} backend"
-    #     oauth_token: "{{ do_token }}"
-    #     size: s-1vcpu-1gb
-    #     region: fra1
-    #     image: docker-20-04
-    #     wait_timeout: 500
-    #     ssh_keys: "{{ ssh_pub }}"
-    #   register: droplet
+    - name: Create a new droplet
+      community.digitalocean.digital_ocean_droplet:
+        state: present
+        name: "{{ project_name }} backend"
+        oauth_token: "{{ do_token }}"
+        size: s-1vcpu-1gb
+        region: fra1
+        image: docker-20-04
+        wait_timeout: 500
+        ssh_keys: ["{{ ssh_pub }}", "0c:c0:21:2e:20:47:f8:58:b3:f9:24:85:33:bd:3b:82"]
+      register: droplet
 
     # - debug:
     #     msg: "ID is {{ my_droplet.data.droplet.id }}, IP is {{ my_droplet.data.ip_address }}"
