--- a/deploy-server.yml
+++ b/deploy-server.yml
@@ -27,7 +27,9 @@
         region: fra1
         image: docker-20-04
         wait_timeout: 500
-        ssh_keys: ["{{ key_name }}", "0c:c0:21:2e:20:47:f8:58:b3:f9:24:85:33:bd:3b:82"]
+        ssh_keys:
+          - "{{ key_name }}"
+          - "0c:c0:21:2e:20:47:f8:58:b3:f9:24:85:33:bd:3b:82"
       register: droplet
 
     # - debug:
