--- a/deploy-server.yml
+++ b/deploy-server.yml
@@ -8,7 +8,7 @@
     ssh_pub: "{{ lookup('env', 'SSH_PUBLIC_KEY') }}"
     ssh_private: "{{ lookup('env', 'SSH_PRIVATE_KEY') }}"
     project_name: "{{ lookup('env', 'PROJECT_NAME') }}"
-    key_name: "{{ project_name  }} ssh key"
+    key_name: "{{ project_name }}-ssh-key"
   tasks:
     - name: Create ssh key
       community.digitalocean.digital_ocean_sshkey:
