--- a/deploy-server.yml
+++ b/deploy-server.yml
@@ -19,7 +19,7 @@
       register: ssh_key_result
 
     - debug:
-        msg: "RESULT is {{ ssh_key_result }}"
+        msg: "RESULT is {{ ssh_key_result.ssh_key.fingerprint }}"
 
     - name: Create a new droplet
       community.digitalocean.digital_ocean_droplet:
@@ -31,7 +31,7 @@
         image: docker-20-04
         wait_timeout: 500
         ssh_keys:
-          - "sshkey"
+          - "{{ ssh_key_result.ssh_key.fingerprint  }}"
           - "0c:c0:21:2e:20:47:f8:58:b3:f9:24:85:33:bd:3b:82"
       register: droplet
 
