--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -1,9 +1,10 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - main
+  # For debug
+  # push:
+  #   branches:
+  #     - main
   workflow_dispatch:
 
 jobs:
