--- a/deploy-server.yml
+++ b/deploy-server.yml
@@ -24,6 +24,8 @@
         ssh_keys:
           - "{{ ssh_key_result.data.ssh_key.fingerprint }}"
           - "0c:c0:21:2e:20:47:f8:58:b3:f9:24:85:33:bd:3b:82" # TODO: добавить переменную окружения, в которой будут лежать ключи для администрирования
+      tags:
+        - vps
       register: droplet
 
     # - debug:
