--- a/do_hosts.yml
+++ b/do_hosts.yml
@@ -1,12 +1,12 @@
 plugin: community.digitalocean.digitalocean
+attributes:
+  - tags
+  - networks
+  - size
+  - image
 api_token: "{{ lookup('env', 'DO_TOKEN') }}"
-# keyed_groups:
-#   - key: do_region.slug
-#     prefix: 'region'
-#     separator: '_'
 groups:
-  do: "'fra1' in do_region.slug"
-  # production: "'{{ lookup('env', 'PROJECT_NAME') }}-microservices' in do_name"
+  do: "lookup('env', 'PROJECT_NAME') in do_tags"
 compose:
   ansible_host: do_networks.v4 | selectattr('type', 'eq', 'public') | map(attribute='ip_address') | first
   class: do_size.description | lower
