feat: add general dependencie

--- a/roles/buildmicroservice/tasks/main.yml
+++ b/roles/buildmicroservice/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: build apolloserver
+- name: build docker-image
   shell: "echo hello"
   tags:
     - build
-    - backend
+    - microservice
