--- a/requirements.yml
+++ b/requirements.yml
@@ -2,5 +2,5 @@
 collections:
 - name: community.digitalocean
   version: 1.9.0
-- name: community.general
-  version: 3.6.0
+- name: community.docker
+  version: 1.9.1
