--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./.cache:/app/.cache
+      - ./ssh:/app/ssh
+    env_file:
+      - ./.env
     # For Debug
     # stdin_open: true
     # tty: true
