--- a/deploy-app.yml
+++ b/deploy-app.yml
@@ -14,6 +14,8 @@
     - role: buildmc
   vars_files:
     - ./vars/versions.yml
+  tags:
+    - build
 
 # deploy applications on hosts
 - hosts: localhost # do
@@ -23,3 +25,5 @@
     - role: deploymc
   vars_files:
     - ./vars/versions.yml
+  tags:
+    - deploy
