--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -20,6 +20,19 @@ jobs:
           name: id_ed25519
           known_hosts: unnecessary
 
+      - name: Create dot ENV file
+        run: |
+          echo "DO_TOKEN=${{ secrets.DO_TOKEN }}" >> .env
+          echo "PROJECT_NAME=fastup-kit" >> .env
+
+      - name: Create SSH files
+        run: |
+          echo ${{ secrets.SSH_PRIVATE_KEY }} >> ./ssh/id_ed25519
+          echo ${{ secrets.SSH_PUBLIC_KEY }} >> ./ssh/id_ed25519.pub
+
+      - name: Check files
+        run: ls -al
+
       # - name: Run ansible-playbook
       #   run: ansible-playbook deploy-app.yml --tags "build" -i production.ini -i do_hosts.yml -vvvv
       #   env:
