--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Create SSH files
         run: |
-          echo ${{ secrets.SSH_PRIVATE_KEY }} >> ./ssh/id_ed25519
-          echo ${{ secrets.SSH_PUBLIC_KEY }} >> ./ssh/id_ed25519.pub
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" >> ./ssh/id_ed25519
+          echo "${{ secrets.SSH_PUBLIC_KEY }}" >> ./ssh/id_ed25519.pub
 
       - name: Check files
         run: ls -al
