--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Create SSH files
         run: |
+          mkdir ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" >> ./ssh/id_ed25519
           echo "${{ secrets.SSH_PUBLIC_KEY }}" >> ./ssh/id_ed25519.pub
 
