--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -32,7 +32,9 @@ jobs:
           echo "${{ secrets.SSH_PUBLIC_KEY }}" >> ./ssh/id_ed25519.pub
 
       - name: Check files
-        run: ls -al
+        run: |
+          ls -al
+          ls ./ssh -al
 
       # - name: Run ansible-playbook
       #   run: ansible-playbook deploy-app.yml --tags "build" -i production.ini -i do_hosts.yml -vvvv
