--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -44,7 +44,7 @@ jobs:
           ls ./ssh -al
 
       - name: Run build ansible-playbook
-        run: docker-compose build && docker-compose run ansible -f docker-compose.yml -f docker-compose.build.yml
+        run: docker-compose -f docker-compose.yml -f docker-compose.build.yml up ansible
 
       # - name: Run ansible-playbook
       #   run: ansible-playbook deploy-app.yml --tags "build" -i production.ini -i do_hosts.yml -vvvv
