--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Continuous Deployment
+name: Testing build
 
 on:
   # For debug
@@ -37,11 +37,6 @@ jobs:
           mkdir ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" >> ./ssh/id_ed25519
           echo "${{ secrets.SSH_PUBLIC_KEY }}" >> ./ssh/id_ed25519.pub
-
-      - name: Check files
-        run: |
-          ls -al
-          ls ./ssh -al
 
       - name: Run build ansible-playbook
         run: docker-compose -f docker-compose.yml -f configs/docker-compose.build.yml up ansible
