--- a/production.ini
+++ b/production.ini
@@ -1,9 +1,11 @@
+[defaults]
+host_key_checking = False
+
 [do]
 
 [do:vars]
 ansible_ssh_user=root
 ansible_ssh_private_key_file=/app/ssh/id_ed25519
-host_key_checking=False
 
 [all]
 localhost
