--- a/.github/workflows/deploy-ms.yml
+++ b/.github/workflows/deploy-ms.yml
@@ -1,7 +1,9 @@
 name: Continuous Deployment Application
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -16,10 +18,14 @@ jobs:
           name: id_ed25519
           known_hosts: unnecessary
 
+      # ATTENTION: will throw this .env file in running containers
       - name: Create dot ENV file
         run: |
           echo DO_TOKEN=${{ secrets.DO_TOKEN }} >> .env
-          echo "PROJECT_NAME=fastup-kit" >> .env
+          echo PROJECT_NAME=fastup-kit >> .env
+          echo DO_TOKEN=${{ secrets.DO_TOKEN }} >> .env
+          echo PG_CONNECTION_STRING=${{ secrets.PG_CONNECTION_STRING }} >> .env
+          echo PG_PASSWORD=${{ secrets.PG_PASSWORD }} >> .env
 
       - name: Create SSH files
         run: |
@@ -27,6 +33,6 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" >> ./ssh/id_ed25519
           echo "${{ secrets.SSH_PUBLIC_KEY }}" >> ./ssh/id_ed25519.pub
 
-      # - name: Deploy infrastructure
-      #   run: docker-compose -f docker-compose.yml -f configs/docker-compose.infra.yml up ansible
+      - name: Build & Deploy microservices
+        run: docker-compose -f docker-compose.yml -f configs/docker-compose.all-ms.yml up ansible
 
