--- a/configs/docker-compose.all-ms.yml
+++ b/configs/docker-compose.all-ms.yml
@@ -2,4 +2,4 @@
 version: "3.9"
 services:
   ansible:
-    command: ansible-playbook all.yml --tags "build,deploy" -i production.ini -i do_hosts.yml -vvvv
+    command: ansible-playbook all.yml --tags "build,deploy" -i production.ini -i do_hosts.yml -v
