--- a/configs/docker-compose.build.yml
+++ b/configs/docker-compose.build.yml
@@ -2,4 +2,4 @@
 version: "3.9"
 services:
   ansible:
-    command: ansible-playbook all.yml --tags "build" -vvvv
+    command: ansible-playbook all.yml --tags "build" -v
