--- a/configs/docker-compose.infra.yml
+++ b/configs/docker-compose.infra.yml
@@ -2,4 +2,4 @@
 version: "3.9"
 services:
   ansible:
-    command: ansible-playbook all.yml --tags "ssh,vps" -i production.ini -vvvv
+    command: ansible-playbook all.yml --tags "ssh,vps" -i production.ini -v
