--- a/configs/docker-compose.single-ms.yml
+++ b/configs/docker-compose.single-ms.yml
@@ -2,4 +2,4 @@
 version: "3.9"
 services:
   ansible:
-    command: ansible-playbook all.yml --tags "build,deploy" -i production.ini -i do_hosts.yml -vvvv --extra-vars "app_name=$NAME app_version=$VERSION app_repo=$REPO"
+    command: ansible-playbook all.yml --tags "build,deploy" -i production.ini -i do_hosts.yml -v --extra-vars "app_name=$NAME app_version=$VERSION app_repo=$REPO"
