--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   ansible:
     build: .
     container_name: ansible
+    environment:
+      ANSIBLE_HOST_KEY_CHECKING: "False"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./.cache:/app/.cache
