--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: fastup-kit/bump-version
+        uses: fastup-kit/bump-version@main
         with:
           who-to-greet: 'Mona the Octocat'
       # Use the output from the `hello` step
