--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -8,11 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
-      - name: Hello world action step
-        id: hello
+      - name: Setup new version
+        id: bump-version
         uses: fastup-kit/bump-version@main
         with:
-          who-to-greet: 'Mona the Octocat'
-      # Use the output from the `hello` step
+          file: 'vars/versions.yml'
+          name: 'node-backend'
+          version: 'v99.99.99'
+
+      # Use the output from the `bump-version` step
       - name: Get the output time
-        run: echo "The time was ${{ steps.hello.outputs.time }}"
+        run: echo "The time was ${{ steps.bump-version.outputs.time }}"
